--- a/publications/2019/ieeesw_marc.bib
+++ b/publications/2019/ieeesw_marc.bib
@@ -4,4 +4,7 @@
   journal = 	 {IEEE Software},
   year = 	 {2019},
 publisher={IEEE},
-note={To appear},}
+volume={36},
+number = {5},
+pages={46--50},
+}
