--- a/publications/2021/icse_armstrong.bib
+++ b/publications/2021/icse_armstrong.bib
@@ -1,5 +1,5 @@
 @INPROCEEDINGS{icse21,
-  author = {Armstrong Foundjam and Ellis E. Eghan and Bram Adams},
+  author = {Armstrong Foundjem and Ellis E. Eghan and Bram Adams},
   title = {Onboarding vs. Diversity, Productivity and Quality -- Empirical Study of the OpenStack Ecosystem},
   booktitle = {Proceedings of the 43rd International Conference on Software Engineering (ICSE)},
   year = {2021},
