--- a/publications/2020/emse_parisa.bib
+++ b/publications/2020/emse_parisa.bib
@@ -4,5 +4,6 @@
    journal = {Empirical Software Engineering},
    publisher = {Springer},
 year={2020},
-notes={To appear},
+pages={4873--4926},
+volume={25},
 }
