--- a/publications/2020/ieesw_ai.bib
+++ b/publications/2020/ieesw_ai.bib
@@ -4,5 +4,7 @@
   journal = 	 {IEEE Software},
   year = 	 {2020},
 publisher={IEEE},
-note={To appear},
+pages={104--108},
+volume={37},
+number={5},
 }
