Updating bib information.

--- a/publications/2019/emse_mahdis.bib
+++ b/publications/2019/emse_mahdis.bib
@@ -4,5 +4,6 @@
    journal = {Empirical Software Engineering},
    publisher = {Springer},
 year={2019},
-notes={To appear},
+volume={24},
+pages={3933--3971},
 }
