--- a/publications/2019/fse.bib
+++ b/publications/2019/fse.bib
@@ -4,4 +4,5 @@
   booktitle = {Proceedings of the 27th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE)},
   year = {2019},
   month = {August},
-note ={To appear},}
+  pages={74--85},
+}
