--- a/publications/2020/tse.bib
+++ b/publications/2020/tse.bib
@@ -1,8 +1,10 @@
 @article{tse2020,
-   author = {Heng Li and Weiyi Shang and Bram Adams and Mohammed Sayagh and Ahmed E. Hassan},
-   title = {A Qualitative Study of the Benefits and Costs of Logging from Developers' Perspectives},
+   author = {Mohammed Sayagh and Noureddine Kerzazi and Bram Adams and Fabio Petrillo},
+   title = {Software Configuration Engineering in Practice -- Interviews, Survey, and Systematic Literature Review},
    journal = {Transactions on Software Engineering},
    publisher = {IEEE},
    year={2020},
-   notes={To appear},
+   volume={46},
+   number={6},
+   pages={646--673},
 }
