--- a/publications/2021/emse_sophia.bib
+++ b/publications/2021/emse_sophia.bib
@@ -4,5 +4,6 @@
    journal = {Empirical Software Engineering},
    publisher = {Springer},
 year={2021},
-notes={To appear},
+volume={26},
+number={97},
 }
