--- a/publications/2021/jss_amine.bib
+++ b/publications/2021/jss_amine.bib
@@ -4,5 +4,7 @@
  journal = {J. Syst. Softw.},
  year = {2021},
  publisher = {Elsevier Science Inc.},
- notes = {To appear},
+volume={177},
+month={July},
+pages = {110939},
 }
