--- a/publications/2021/tse.bib
+++ b/publications/2021/tse.bib
@@ -4,5 +4,7 @@
    journal = {Transactions on Software Engineering},
    publisher = {IEEE},
    year={2021},
-   notes={To appear},
+   volume={47},
+  number={12},
+  pages={2858-2873},
 }
