--- a/publications/2016/csed.bib
+++ b/publications/2016/csed.bib
@@ -5,5 +5,5 @@
   month = {May},
   booktitle =	 {Proceedings of the International Workshop on Continuous Software Evolution and Delivery (CSED)},
   address =	 {Austin, Texas},
-  note = {To appear},
+pages = {77--83}
 }
