--- a/publications/2021/cscw.bib
+++ b/publications/2021/cscw.bib
@@ -5,5 +5,8 @@
   year = {2021},
   month = {October},
   address = {virtual},
-notes={To appear},
+  volume = {5},
+number = {CSCW2},
+articleno = {353},
+numpages = {35},
 }
