--- a/publications/2021/jss_parisa.bib
+++ b/publications/2021/jss_parisa.bib
@@ -2,7 +2,8 @@
  author = {Parisa Moslehi and Juergen Rilling and Bram Adams},
  title = {A user survey on the adoption of crowd-based software engineering instructional screencasts by the new generation of software developers},
  journal = {J. Syst. Softw.},
- year = {2021},
+ year = {2022},
  publisher = {Elsevier Science Inc.},
- notes = {To appear},
+ volume={185},
+ number={C},
 }
