--- a/publications/2022/msr22.bib
+++ b/publications/2022/msr22.bib
@@ -4,6 +4,6 @@
   booktitle = {Proceedings of the 19th IEEE Working Conference on Mining Software Repositories (MSR)},
   year = 	 {2022},
   address = 	 {Pittsburgh, PA, USA},
-  notes={To appear},
+  pages={309--320},
 }
 
