--- a/publications/2022/tem.bib
+++ b/publications/2022/tem.bib
@@ -1,10 +1,9 @@
-@ARTICLE{mujahid21,
+@ARTICLE{mujahid22,
   author={Mujahid, Suhaib and Costa, Diego Elias and Abdalkareem, Rabe and Shihab, Emad and Saied, Mohamed Aymen and Adams, Bram},
   journal={IEEE Transactions on Engineering Management}, 
   title={Toward Using Package Centrality Trend to Identify Packages in Decline}, 
-  year={2021},
-  volume={},
-  number={},
-  pages={1-15},
-  notes={To appear},
+  year={2022},
+  volume={69},
+  number={6},
+  pages={3618--3632},
   doi={10.1109/TEM.2021.3122012}}
