--- a/publications/2022/tosem_ben.bib
+++ b/publications/2022/tosem_ben.bib
@@ -4,5 +4,8 @@
    journal = {Transactions on Software Engineering and Methodology (TOSEM)},
    publisher = {ACM},
    year={2022},
-   notes={To appear},
+   volume={32},
+   number={1},
+   pages={1--40},
 }
+
