--- a/publications/2022/tse_atique.bib
+++ b/publications/2022/tse_atique.bib
@@ -1,8 +1,10 @@
-@article{tse2020_atique,
+@article{tse2022_atique,
    author = {Md Atique Reza Chowdhury and Rabe Abdalkareem and Emad Shihab and Bram Adams},
    title = {On the Untriviality of Trivial Packages: An Empirical Study of npm JavaScript Packages},
    journal = {Transactions on Software Engineering},
    publisher = {IEEE},
-   year={2021},
-   notes={To appear},
+   year={2022},
+   volume={48},
+   number={8},
+   pages={2695--2708},
 }
