--- a/publications/2022/tse_shiva.bib
+++ b/publications/2022/tse_shiva.bib
@@ -1,8 +1,10 @@
-@article{tse2021_shiva,
+@article{tse2022_shiva,
    author = {Shivashree Vysali and Shane McIntosh and Bram Adams},
    title = {Quantifying, Characterizing, and Mitigating Flakily Covered Program Elements},
    journal = {Transactions on Software Engineering},
    publisher = {IEEE},
-   year={2021},
-   notes={To appear},
+   year={2022},
+   volume={48},
+   number={3},
+   pages={1018--1029},
 }
