--- a/publications/2022/emse_upstream.bib
+++ b/publications/2022/emse_upstream.bib
@@ -4,5 +4,6 @@
    journal = {Empirical Software Engineering},
    publisher = {Springer},
 year={2022},
-notes={To appear},
+volume={27},
+number={134},
 }
