--- a/publications/2023/tse_armstrong.bib
+++ b/publications/2023/tse_armstrong.bib
@@ -4,5 +4,7 @@
    journal = {Transactions on Software Engineering},
    publisher = {IEEE},
    year={2023},
-   notes={To appear},
+   volume={49},
+   number={10},
+pages={4731--4750},
 }
