--- a/publications/2024/emse_akshat_within.bib
+++ b/publications/2024/emse_akshat_within.bib
@@ -2,6 +2,7 @@
    author = {Akshat Malik and Bram Adams and Ahmed E. Hassan},
    title = {Towards Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction},
    journal = {Empirical Software Engineering},
+   year = {2024},
    publisher = {Springer},
    notes={To appear},
 }
