Updating the title.

--- a/publications/2024/fse.bib
+++ b/publications/2024/fse.bib
@@ -1,6 +1,6 @@
 @INPROCEEDINGS{fse24,
   author = {Doriane Olewicki and Sarra Habchi and Bram Adams},
-  title = {An empirical study on code review activity prediction in practice},
+  title = {An empirical study on code review activity prediction and its impact in practice},
   booktitle = {Proceedings of the ACM on Software Engineering (PACMSE), Issue FSE 2024},
   address={Porto de Galinhas, Brazil},
   year = {2024},
