--- a/publications/2024/seip.bib
+++ b/publications/2024/seip.bib
@@ -1,6 +1,6 @@
 @InProceedings{seip24,
   author = 	 {Doriane Olewicki and Sarra Habchi and Mathieu Nayrolles and Mojtaba Faramarzi and Sarath Chandar and Bram Adams},
-  title = 	 {Towards Lifelong Learning for Software Analytics Models: Empirical Study on Brown Build and Risk Prediction},
+  title = 	 {On the Costs and Benefits of Adopting Lifelong Learning for Software Analytics: Empirical Study on Brown Build and Risk Prediction},
   booktitle = {In Proceedings of the Software Engineering In Practice (SEIP) track of the 46th International Conference on Software Engineering (ICSE)},
   year = 	 {2024},
   address = 	 {Lisbon, Portugal},
