Updates to paper information.

--- a/publications/2023/fse.bib
+++ b/publications/2023/fse.bib
@@ -4,5 +4,5 @@
   booktitle = {Proceedings of the 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE)},
   year = {2023},
   month = {December},
-  notes={To appear},
+  pages={845--857},
 }
