--- a/publications/2024/emse_youssef.bib
+++ b/publications/2024/emse_youssef.bib
@@ -4,5 +4,6 @@
    journal = {Empirical Software Engineering},
    year = {2024},
    publisher = {Springer},
-   notes={To appear},
+      volume={29},
+   number={5},
 }
