--- a/publications/2024/jsep_maleknaz.bib
+++ b/publications/2024/jsep_maleknaz.bib
@@ -4,5 +4,6 @@
    journal = {Journal of Software: Evolution and Process (JSEP)},
    publisher = {Wiley},
 year={2023},
-notes={To appear},
+volume={36},
+number={5},
 }
