--- a/publications/2024/ieeesw-ernesto.bib
+++ b/publications/2024/ieeesw-ernesto.bib
@@ -4,5 +4,7 @@
   journal = 	 {IEEE Software},
   year = 	 {2024},
 publisher={IEEE},
-notes={To appear},
+   volume={41},
+   number={5},
+   pages={52--59},
 }
