Fixing publication date.

--- a/publications/2025/ieeesw-harsh.bib
+++ b/publications/2025/ieeesw-harsh.bib
@@ -1,8 +1,8 @@
-@Article{patel24b,
+@Article{patel25,
   author = 	 {Harsh Patel and Dominique Boucher and Emad Fallahzadeh and Ahmed E. Hassan and Bram Adams},
   title = 	 {A State-of-the-practice Release-readiness Checklist for Generative AI-based Software Products},
   journal = 	 {IEEE Software},
-  year = 	 {2024},
+  year = 	 {2025},
 publisher={IEEE},
 notes={To appear},
 }
