--- a/publications/2024/forge.bib
+++ b/publications/2024/forge.bib
@@ -1,5 +1,5 @@
 @InProceedings{forge24,
-  author = 	 {Marcos Macedo and Yuan Tian and Filipe Cogo and Bram Adams},
+  author = 	 {Marcos Macedo and Yuan Tian and Filipe R. C\^ogo and Bram Adams},
   title = 	 {Exploring the Impact of the Output Format on the Evaluation of Large Language Models for Code Translation},
   booktitle = {In Proceedings of the 2024 Special Event of AI Foundation Models and Software Engineering (FORGE)},
   year = 	 {2024},
