--- a/publications/2024/fse.bib
+++ b/publications/2024/fse.bib
@@ -5,7 +5,8 @@
   address={Porto de Galinhas, Brazil},
   year = {2024},
   month = {August},
-  notes={To appear},
+  number = {99},
+  pages={2238--2260},
 }
 
 
