--- a/publications/2025/emse_scale.bib
+++ b/publications/2025/emse_scale.bib
@@ -4,5 +4,6 @@
    journal = {Empirical Software Engineering},
    year = {2025},
    publisher = {Springer},
-   note = {To appear}
+   volume = {30},
+   number = {1},
 }
