--- a/publications/2025/ieeesw-harsh.bib
+++ b/publications/2025/ieeesw-harsh.bib
@@ -4,5 +4,7 @@
   journal = 	 {IEEE Software},
   year = 	 {2025},
 publisher={IEEE},
-notes={To appear},
+volume={42},
+numbers={1},
+pages={74--83},
 }
