--- a/publications/2025/tse_jimmy.bib
+++ b/publications/2025/tse_jimmy.bib
@@ -4,5 +4,7 @@
    journal = {Transactions on Software Engineering},
    publisher = {IEEE},
    year={2025},
-   notes={To appear},
+   pages={929--946},
+   volume={51},
+   number={4},
 }
