--- a/publications/2025/emse_amir_sentinel.bib
+++ b/publications/2025/emse_amir_sentinel.bib
@@ -4,5 +4,6 @@
    journal = {Empirical Software Engineering},
    year = {2025},
    publisher = {Springer},
-   notes = {To appear},
+   volume = {30},
+   number = {3},
 }
