--- a/publications/2025/emse_semver.bib
+++ b/publications/2025/emse_semver.bib
@@ -5,5 +5,6 @@ Releases on Hugging Face},
    journal = {Empirical Software Engineering},
    year = {2025},
    publisher = {Springer},
-   note = {To appear}
+   volume = {30},
+   number = {3},
 }
