Updating status of papers.

--- a/publications/2025/ieeesw-shenyu.bib
+++ b/publications/2025/ieeesw-shenyu.bib
@@ -1,8 +1,9 @@
-@Article{shenyu24b,
+@Article{shenyu25,
   author = 	 {Shenyu Zheng and Bram Adams and Ahmed E. Hassan},
   title = 	 {On Build Hermeticity in Bazel-based Build Systems},
   journal = 	 {IEEE Software},
-  year = 	 {2024},
+  year = 	 {2025},
 publisher={IEEE},
-notes={To appear},
+volume = {42},
+pages = {55--63},
 }
