--- a/publications/2026/emse_output.bib
+++ b/publications/2026/emse_output.bib
@@ -3,6 +3,7 @@
    title = {Output Format Biases in the Evaluation of Large Language Models for Code Translation},
    journal = {Empirical Software Engineering (EMSE)},
    publisher = {Springer},
-   year = {2025},
-   notes = {To appear},
+   year = {2026},
+   volume = {31},
+   number = {41},
 }
